--- a/test/Test1/Test1.csproj
+++ b/test/Test1/Test1.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\src\ConfigEditor\ConfigEditor.csproj" />
+    <ProjectReference Include="..\..\src\ConfigEditor\ConfigEditor.csproj" />
   </ItemGroup>
 
 </Project>
