添加生成测试按钮

--- a/src/UI/ConfigEditor.UIBase/ConfigEditor.UIBase.csproj
+++ b/src/UI/ConfigEditor.UIBase/ConfigEditor.UIBase.csproj
@@ -15,6 +15,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
+	  <ProjectReference Include="..\..\..\test\Test1\Test1.csproj" />
 	  <ProjectReference Include="..\..\ConfigEditor\ConfigEditor.csproj" />
 	</ItemGroup>
 </Project>
