修改模块启动

--- a/test/Test1.UI/Test1.UI.csproj
+++ b/test/Test1.UI/Test1.UI.csproj
@@ -21,8 +21,12 @@
 
 	<ItemGroup>
 		<None Remove="appsettings.json" />
+		<None Remove="appsettings.secrets.json" />
 		<Content Include="appsettings.json">
 			<CopyToOutputDirectory>Always</CopyToOutputDirectory>
+		</Content>
+		<Content Include="appsettings.secrets.json">
+		  <CopyToOutputDirectory>Always</CopyToOutputDirectory>
 		</Content>
 	</ItemGroup>
 
