实现基础类型展示

--- a/src/UI/ConfigEditor.Wpf/ConfigEditor.Wpf.csproj
+++ b/src/UI/ConfigEditor.Wpf/ConfigEditor.Wpf.csproj
@@ -13,7 +13,7 @@
 	</ItemGroup>
 
 	<ItemGroup>
-		<ProjectReference Include="..\src\UI\ConfigEditor.UIBase\ConfigEditor.UIBase.csproj" />
+		<ProjectReference Include="..\ConfigEditor.UIBase\ConfigEditor.UIBase.csproj" />
 	</ItemGroup>
 
 </Project>
