--- a/src/UI/ConfigEditor.UIBase/ConfigEditor.UIBase.csproj
+++ b/src/UI/ConfigEditor.UIBase/ConfigEditor.UIBase.csproj
@@ -10,6 +10,7 @@
 
 	<ItemGroup>
 		<PackageReference Include="ReactiveUI.Fody" Version="19.5.41" />
+		<PackageReference Include="TextCopy" Version="6.2.1" />
 		<PackageReference Include="Ty.UIBase" Version="0.17.0" />
 	</ItemGroup>
 
